--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d7f372dc-b8f3-4985-bf27-15581b3dbf47"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
